--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flappy Bird</title>
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -29,7 +31,7 @@
   
   <div id="end-screen" class="screen hidden">
     <p>Приплыли...</p>
-    <p>Счет: <span id="score">0</span></p>
+    <p>Отрицательно выросли на <span id="score">0</span></p>
     <button id="retry-button">Играть снова</button>
     <button id="donate-button-end">Задонатить</button>
   </div>
